--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "518230156_cdbackend",
+  "name": "q",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,5 +7,16 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.3"
+  },
+  "keywords": [],
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
